Fix misaligned text in footer

--- a/style.css
+++ b/style.css
@@ -128,5 +128,6 @@ main {
         height: 10vh;
         flex-direction: column;
         justify-content: space-around;
+        text-align: center;
     }
 }
